--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Editors
+.idea
+.vscode
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,5 +15,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Test data
+test/data/*
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+!.gitkeep
